some issues fixed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,10 +16,11 @@ add_library(socket STATIC http_server/socket/src/socket.cpp)
 target_include_directories(socket PUBLIC
                            http_server/socket/include)
 
+add_executable(server http_server/src/main.cpp)
 target_link_libraries(server socket)
 target_link_libraries(server pthread)
 
-add_executable(
-        test http_server/src/test.cpp
+add_executable(test
+        http_server/src/test.cpp
         http_server/src/HttpRequest.cpp
         http_server/src/HttpResponse.cpp)
