added different types

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,10 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
 
 include_directories(http_server/include)
 
+add_library(http_message STATIC http_server/src/HttpResponse.cpp http_server/src/HttpRequest.cpp)
+
 add_executable(server http_server/src/main.cpp)
+target_link_libraries(server http_message)
 
 ###################
 # Socket Library
