--- a/linters/cppcheck/cfg/std.cfg
+++ b/linters/cppcheck/cfg/std.cfg
@@ -2394,7 +2394,7 @@
       <not-null/>
     </arg>
     <warn severity="warning">Obsolete function 'gets' called. It is recommended to use 'fgets' or 'gets_s' instead.
-The obsolete function 'gets' is called. With 'gets' you'll get a buffer overrun if the input data exceeds the size of the buffer. It is recommended to use the functions 'fgets' or 'gets_s' instead.</warn>
+The obsolete function 'gets' is called. With 'gets' you'll get a buffer overrun if the input data_string exceeds the size of the buffer. It is recommended to use the functions 'fgets' or 'gets_s' instead.</warn>
   </function>
   <!-- char *gets_s(char *buffer, rsize_t size); -->
   <function name="gets_s,std::gets_s">
@@ -6010,7 +6010,7 @@ The obsolete function 'gets' is called. With 'gets' you'll get a buffer overrun 
     <noreturn>false</noreturn>
     <arg nr="1"/>
   </function>
-  <function name="std::string::c_str,std::string::data">
+  <function name="std::string::c_str,std::string::data_string">
     <use-retval/>
     <returnValue type="const char *"/>
     <noreturn>false</noreturn>
@@ -6421,7 +6421,7 @@ The obsolete function 'gets' is called. With 'gets' you'll get a buffer overrun 
       <function name="at" yields="at_index"/>
       <function name="front" yields="item"/>
       <function name="back" yields="item"/>
-      <function name="data" yields="buffer"/>
+      <function name="data_string" yields="buffer"/>
       <function name="shrink_to_fit" action="change-internal"/>
       <function name="reserve" action="change-internal"/>
     </access>
@@ -6434,7 +6434,7 @@ The obsolete function 'gets' is called. With 'gets' you'll get a buffer overrun 
       <function name="at" yields="at_index"/>
       <function name="front" yields="item"/>
       <function name="back" yields="item"/>
-      <function name="data" yields="buffer"/>
+      <function name="data_string" yields="buffer"/>
       <function name="fill" action="change-content"/>
     </access>
   </container>
@@ -6522,7 +6522,7 @@ The obsolete function 'gets' is called. With 'gets' you'll get a buffer overrun 
       <function name="at" yields="at_index"/>
       <function name="front" yields="item"/>
       <function name="back" yields="item"/>
-      <function name="data" yields="buffer"/>
+      <function name="data_string" yields="buffer"/>
       <function name="c_str" yields="buffer-nt"/>
       <function name="length" yields="size"/>
       <function name="find" action="find"/>
