Temporarily removed test target from CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,7 @@ target_link_libraries(server socket)
 target_link_libraries(server client)
 target_link_libraries(server pthread)
 
-add_executable(test
-        http_server/src/test.cpp
-        http_server/src/HttpRequest.cpp
-        http_server/src/HttpResponse.cpp)
+# add_executable(test
+#         http_server/src/test.cpp
+#         http_server/src/HttpRequest.cpp
+#         http_server/src/HttpResponse.cpp)
