Added TasksController, replaced haveNoData queue with vector

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,7 +39,8 @@ target_link_libraries(client socket)
 ######################
 file(GLOB async_src http_server/async/src/Task.cpp
                     http_server/async/src/Worker.cpp
-                    http_server/async/src/TaskBuilder.cpp)
+                    http_server/async/src/TaskBuilder.cpp
+                    http_server/async/src/TasksController.cpp)
 add_library(asyncServer STATIC http_server/async/src/Task.cpp)
 target_include_directories(asyncServer PUBLIC
                            http_server/async/include)
