Added Listeners, they work

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,7 @@ file(GLOB ASYNC_SRC ${PROJECT_SOURCE_DIR}/http_server/async/src/Task.cpp
                     ${PROJECT_SOURCE_DIR}/http_server/async/src/Worker.cpp
                     ${PROJECT_SOURCE_DIR}/http_server/async/src/TaskBuilder.cpp
                     ${PROJECT_SOURCE_DIR}/http_server/async/src/TasksController.cpp
+                    ${PROJECT_SOURCE_DIR}/http_server/async/src/Listener.cpp
                     ${PROJECT_SOURCE_DIR}/http_server/async/src/Master.cpp)
 add_library(asyncServer STATIC ${ASYNC_SRC})
 target_include_directories(asyncServer PUBLIC
@@ -90,3 +91,4 @@ endif()
 target_link_libraries(server socket)
 target_link_libraries(server client)
 target_link_libraries(server pthread)
+target_link_libraries(server asyncServer)
