--- a/linters/cpplint/CPPLINT.cfg
+++ b/linters/cpplint/CPPLINT.cfg
@@ -7,3 +7,4 @@ filter=-build/include_subdir
 filter=-build/include
 filter=-readability/casting
 filter=-legal/copyright
+filter=-runtime/references
