Fixed code style back to usual, fixed some style errors, added graceful shutdown message

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,11 +13,11 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
 include_directories(${PROJECT_SOURCE_DIR}/http_server/include)
 
 add_library(http_message STATIC
-        ${PROJECT_SOURCE_DIR}/http_server/src/HttpResponse.cpp
-        ${PROJECT_SOURCE_DIR}/http_server/src/HttpRequest.cpp
-        ${PROJECT_SOURCE_DIR}/http_server/src/HttpRequestCreator.cpp
-        ${PROJECT_SOURCE_DIR}/http_server/src/TemplateManager.cpp
-        ${PROJECT_SOURCE_DIR}/http_server/src/HttpResponseReader.cpp)
+            ${PROJECT_SOURCE_DIR}/http_server/src/HttpResponse.cpp
+            ${PROJECT_SOURCE_DIR}/http_server/src/HttpRequest.cpp
+            ${PROJECT_SOURCE_DIR}/http_server/src/HttpResponseReader.cpp
+            ${PROJECT_SOURCE_DIR}/http_server/src/HttpRequestCreator.cpp
+            ${PROJECT_SOURCE_DIR}/http_server/src/TemplateManager.cpp)
 
 
 add_executable(server ${PROJECT_SOURCE_DIR}/http_server/src/main.cpp)
@@ -45,14 +45,15 @@ target_link_libraries(client socket)
 ######################
 # Async Server Library
 ######################
-file(GLOB ASYNC_SRC ${PROJECT_SOURCE_DIR}/http_server/async/src/Task.cpp
-        ${PROJECT_SOURCE_DIR}/http_server/async/src/TaskFuncs.cpp
-        ${PROJECT_SOURCE_DIR}/http_server/async/src/Worker.cpp
-        ${PROJECT_SOURCE_DIR}/http_server/async/src/TaskBuilder.cpp
-        ${PROJECT_SOURCE_DIR}/http_server/async/src/TasksController.cpp
-        ${PROJECT_SOURCE_DIR}/http_server/async/src/Listener.cpp
-        ${PROJECT_SOURCE_DIR}/http_server/async/src/Master.cpp
-        ${PROJECT_SOURCE_DIR}/http_server/async/src/msleep.cpp)
+file(GLOB ASYNC_SRC
+     ${PROJECT_SOURCE_DIR}/http_server/async/src/msleep.cpp
+     ${PROJECT_SOURCE_DIR}/http_server/async/src/Task.cpp
+     ${PROJECT_SOURCE_DIR}/http_server/async/src/TaskFuncs.cpp
+     ${PROJECT_SOURCE_DIR}/http_server/async/src/Worker.cpp
+     ${PROJECT_SOURCE_DIR}/http_server/async/src/TaskBuilder.cpp
+     ${PROJECT_SOURCE_DIR}/http_server/async/src/TasksController.cpp
+     ${PROJECT_SOURCE_DIR}/http_server/async/src/Listener.cpp
+     ${PROJECT_SOURCE_DIR}/http_server/async/src/Master.cpp)
 
 add_library(asyncServer STATIC ${ASYNC_SRC})
 target_include_directories(asyncServer PUBLIC
